Added view point to index

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang = "en">
     <head>
         <meta charset = "utf-8">
+        <meta name="viewport" content="width=device-width maximum-scale=1.0">
         <title>ChartBlocks | PHP UK Conference 2014</title>
           <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
           <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
