--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main">
             <div class="row">
-                <h1>Chartblocks at PHP UK Conference</h1>
+                <h1>PHP UK 2014 Statistics</h1>
                 <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet fermentum.</p>
             </div>
             <div class="row php"></div>
