--- a/index.html
+++ b/index.html
@@ -38,34 +38,40 @@
         <div class="main">
             <div class="row">
                 <h1>PHP UK 2014 Statistics</h1>
-                <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet fermentum.</p>
             </div>
             <div class="row php"></div>
             <div class="row chart">
-                <h2>This is a chart</h2>
-                    <iframe width="1000" height="400" src="//embed.chartblocks.com/1.0/?c=52f5359bc9a61d2f5603afa0" frameBorder="0"></iframe>
-                    <p>Curabitur blandit tempus porttitor. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Sed posuere consectetur est at lobortis. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+                <div class="c1 people">
+                    <h1>1,240</h1>
+                    <p>People in</p>
+                </div>
+                <div class="c1 drinks">
+                    <h1>690</h1>
+                    <p>Food consumed</p>
+                </div>
+                <div class="c1 drinks">
+                    <h1>360</h1>
+                    <p>Drinks consumed</p>
+                </div>
+                <div class="c1 Beer">
+                    <h1>560</h1>
+                    <p>Beer consumed</p>
+                </div>
+
+                <div class="c7">
+                    <iframe width="1000" height="400" src="//embed.chartblocks.com/1.0/?c=52fdf07ac9a61de41f9c0a19" frameBorder="0"></iframe>
+                </div>
             </div>
             <div class="row chart">
-                <h2>These are Multiple Charts</h2>
-                    <div class="c3">
-                        <iframe width="200" height="200" src="//embed.chartblocks.com/1.0/?c=52fba6eec9a61d7d019c0a19" frameBorder="0"></iframe>
+                    <div class="c4">
+                        <iframe width="200" height="200" src="//embed.chartblocks.com/1.0/?c=52fe1608c9a61d6f229c0a19" frameBorder="0"></iframe>
                     </div>
-                    <div class="c3">
-                        <iframe width="200" height="200" src="//embed.chartblocks.com/1.0/?c=52fba6eec9a61d7d019c0a19" frameBorder="0"></iframe>
+                    <div class="c4">
+                        <iframe width="200" height="200" src="//embed.chartblocks.com/1.0/?c=52fe150fc9a61d46229c0a19" frameBorder="0"></iframe>
                     </div>
-                    <div class="c3">
-                        <iframe width="200" height="200" src="//embed.chartblocks.com/1.0/?c=52fba6eec9a61d7d019c0a19" frameBorder="0"></iframe>
+                    <div class="c4">
+                        <iframe width="200" height="200" src="//embed.chartblocks.com/1.0/?c=52fe159ec9a61d3c229c0a19" frameBorder="0"></iframe>
                     </div>
-                    <div class="c3">
-                        <iframe width="200" height="200" src="//embed.chartblocks.com/1.0/?c=52fba6eec9a61d7d019c0a19" frameBorder="0"></iframe>
-                    </div>
-                    <p>Nulla vitae elit libero, a pharetra augue. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur blandit tempus porttitor. Nulla vitae elit libero, a pharetra augue.</p>
-            </div>
-            <div class="row chart">
-                <h2>This is also a chart</h2>
-                    <iframe width="1000" height="400" src="//embed.chartblocks.com/1.0/?c=52f5366bc9a61d245603afa0" frameBorder="0"></iframe>
-                    <p>Etiam porta sem malesuada magna mollis euismod. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Cras mattis consectetur purus sit amet fermentum. Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
             </div>
         </div>
 
