Added better charts

--- a/index.html
+++ b/index.html
@@ -40,38 +40,21 @@
                 <h1>PHP UK 2014 Statistics</h1>
             </div>
             <div class="row php"></div>
-            <div class="row chart">
+            <div class="row stats">
                 <div class="c1 people">
                     <h1>1,240</h1>
                     <p>People in</p>
                 </div>
-                <div class="c1 drinks">
-                    <h1>690</h1>
-                    <p>Food consumed</p>
-                </div>
-                <div class="c1 drinks">
-                    <h1>360</h1>
-                    <p>Drinks consumed</p>
-                </div>
-                <div class="c1 Beer">
-                    <h1>560</h1>
-                    <p>Beer consumed</p>
-                </div>
-
-                <div class="c7">
-                    <iframe width="1000" height="400" src="//embed.chartblocks.com/1.0/?c=52fdf07ac9a61de41f9c0a19" frameBorder="0"></iframe>
-                </div>
             </div>
             <div class="row chart">
-                    <div class="c4">
-                        <iframe width="200" height="200" src="//embed.chartblocks.com/1.0/?c=52fe1608c9a61d6f229c0a19" frameBorder="0"></iframe>
-                    </div>
-                    <div class="c4">
-                        <iframe width="200" height="200" src="//embed.chartblocks.com/1.0/?c=52fe150fc9a61d46229c0a19" frameBorder="0"></iframe>
-                    </div>
-                    <div class="c4">
-                        <iframe width="200" height="200" src="//embed.chartblocks.com/1.0/?c=52fe159ec9a61d3c229c0a19" frameBorder="0"></iframe>
-                    </div>
+                <div class="c6">
+                    <iframe width="800" height="400" src="//embed.chartblocks.com/1.0/?c=53038362c9a61d3753321575&t=a94b137c185b9f7" frameBorder="0"></iframe>
+                </div>
+                <div class="c6">
+                    <iframe width="800" height="400" src="//embed.chartblocks.com/1.0/?c=530393c5c9a61dcc54321575&t=b1a64311267d8da" frameBorder="0"></iframe>
+                </div>
+            <div class="row">
+                <iframe width="800" height="400" src="//embed.chartblocks.com/1.0/?c=53036ac8c9a61da251321575&t=655fa36db773a6c" frameBorder="0"></iframe>
             </div>
         </div>
 
