Made charts responsive

--- a/index.html
+++ b/index.html
@@ -41,9 +41,17 @@
             </div>
             <div class="row php"></div>
             <div class="row stats">
-                <div class="c1 people">
+                <div class="c2 people">
                     <h1>1,240</h1>
-                    <p>People in</p>
+                    <p>Attendees</p>
+                </div>
+                <div class="c2 talks">
+                    <h1>41</h1>
+                    <p>Talks</p>
+                </div>
+                <div class="c2 Speakers">
+                    <h1>31</h1>
+                    <p>Speakers</p>
                 </div>
             </div>
             <div class="row chart">
