--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
             <div class="row stats">
                 <div class="c2 people">
                     <h1>1,240</h1>
-                    <p>Attendees</p>
+                    <h2>Attendees</h2>
                 </div>
                 <div class="c2 talks">
                     <h1>41</h1>
-                    <p>Talks</p>
+                    <h2>Talks</h2>
                 </div>
                 <div class="c2 Speakers">
                     <h1>31</h1>
-                    <p>Speakers</p>
+                    <h2>Speakers</h2>
                 </div>
             </div>
             <div class="row chart">
@@ -61,10 +61,10 @@
                 <div class="c6">
                     <iframe width="800" height="400" src="//embed.chartblocks.com/1.0/?c=530393c5c9a61dcc54321575&t=b1a64311267d8da" frameBorder="0"></iframe>
                 </div>
-            <div class="row">
-                <iframe width="800" height="400" src="//embed.chartblocks.com/1.0/?c=53036ac8c9a61da251321575&t=655fa36db773a6c" frameBorder="0"></iframe>
+                <div class="c6">
+                    <iframe width="800" height="400" src="//embed.chartblocks.com/1.0/?c=53036ac8c9a61da251321575&t=655fa36db773a6c" frameBorder="0"></iframe>
+                </div>
             </div>
-        </div>
 
         <div class="footer">
             <div class="row">
