--- a/index.html
+++ b/index.html
@@ -54,16 +54,14 @@
                     <h2>Speakers</h2>
                 </div>
             </div>
-            <div class="row chart">
-                <div class="c6">
-                    <iframe width="800" height="400" src="//embed.chartblocks.com/1.0/?c=53038362c9a61d3753321575&t=a94b137c185b9f7" frameBorder="0"></iframe>
-                </div>
-                <div class="c6">
-                    <iframe width="800" height="400" src="//embed.chartblocks.com/1.0/?c=530393c5c9a61dcc54321575&t=b1a64311267d8da" frameBorder="0"></iframe>
-                </div>
-                <div class="c6">
-                    <iframe width="800" height="400" src="//embed.chartblocks.com/1.0/?c=53036ac8c9a61da251321575&t=655fa36db773a6c" frameBorder="0"></iframe>
-                </div>
+            <div class="row">
+                <iframe width="800" height="400" src="//embed.chartblocks.com/1.0/?c=53038362c9a61d3753321575&t=a94b137c185b9f7" frameBorder="0"></iframe>
+            </div>
+            <div class="row">
+                <iframe width="800" height="400" src="//embed.chartblocks.com/1.0/?c=530393c5c9a61dcc54321575&t=b1a64311267d8da" frameBorder="0"></iframe>
+            </div>
+            <div class="row">
+                <iframe width="800" height="400" src="//embed.chartblocks.com/1.0/?c=53036ac8c9a61da251321575&t=655fa36db773a6c" frameBorder="0"></iframe>
             </div>
 
         <div class="footer">
