--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
                         <h1>31</h1>
                         <h2>Speakers</h2>
                     </li>
+                    <li>
+                        <h1>3</h1>
+                        <h2>Socials</h2>
+                    </li>
                 </ul>
             </div>
             <div class="row">
