Chart order, opening paragraph

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
         <meta charset = "utf-8">
         <meta name="viewport" content="width=device-width maximum-scale=1.0">
         <title>ChartBlocks | PHP UK Conference 2014</title>
-          <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-          <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
-          <!--[if IE]>
-              <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
-          <![endif]-->
+        <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+        <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+        <!--[if IE]>
+            <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+        <![endif]-->
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" /> 
         <link href="stylesheets/error.css" type="text/css" rel="stylesheet" />
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript">
-            $(document).ready(function(){ 
-                $(".toggle-nav").click(function() { 
+            $(document).ready(function() {
+                $(".toggle-nav").click(function() {
                     $(".menu").toggleClass("nav-open");
                 });
             });
@@ -38,6 +38,8 @@
         <div class="main">
             <div class="row">
                 <h1>PHP UK 2014 Statistics</h1>
+                <p>A shining example of using ChartBlocks to plot data from various sources.</p>
+                <p>See how we did it at <a href="https://github.com/ChartBlocks/phpuk14-scripts">https://github.com/ChartBlocks/phpuk14-scripts</a> and sign up for your own <a href="http://app.chartblocks.com/register">ChartBlocks account</a> to get started.</p> 
             </div>
             <div class="row php"></div>
             <div class="row stats">
@@ -61,19 +63,21 @@
                 </ul>
             </div>
             <div class="row">
+                <iframe width="970" height="400" src="//embed.chartblocks.com/1.0/?c=53036ac8c9a61da251321575&t=655fa36db773a6c" frameBorder="0"></iframe>
+            </div>
+            <div class="row">
                 <iframe width="970" height="400" src="//embed.chartblocks.com/1.0/?c=53038362c9a61d3753321575&t=a94b137c185b9f7" frameBorder="0"></iframe>
             </div>
             <div class="row">
                 <iframe width="970" height="400" src="//embed.chartblocks.com/1.0/?c=530393c5c9a61dcc54321575&t=b1a64311267d8da" frameBorder="0"></iframe>
             </div>
             <div class="row">
-                <iframe width="970" height="400" src="//embed.chartblocks.com/1.0/?c=53036ac8c9a61da251321575&t=655fa36db773a6c" frameBorder="0"></iframe>
+                <iframe width="970" height="400" src="//embed.chartblocks.com/1.0/?c=530616f0c9a61dda70321575&t=56b069793a99c47" frameBorder="0"></iframe>
             </div>
-
-        <div class="footer">
-            <div class="row">
-                <p class="copy">Copyright &copy; 2014 <a href="http://www.chartblocks.com">ChartBlocks</a></p>
+            <div class="footer">
+                <div class="row">
+                    <p class="copy">Copyright &copy; 2014 <a href="http://www.chartblocks.com">ChartBlocks</a></p>
+                </div>
             </div>
-        </div>
     </body>
 </html>
