--- a/index.html
+++ b/index.html
@@ -63,15 +63,19 @@
                 </ul>
             </div>
             <div class="row">
+                <h3>#phpuk14 tweets</h3>
                 <iframe width="970" height="400" src="//embed.chartblocks.com/1.0/?c=53036ac8c9a61da251321575&t=655fa36db773a6c" frameBorder="0"></iframe>
             </div>
             <div class="row">
+                <h3>#phpuk14 delegates by country</h3>
                 <iframe width="970" height="400" src="//embed.chartblocks.com/1.0/?c=53038362c9a61d3753321575&t=a94b137c185b9f7" frameBorder="0"></iframe>
             </div>
             <div class="row">
+                <h3>#phpuk14 check-in time</h3>
                 <iframe width="970" height="400" src="//embed.chartblocks.com/1.0/?c=530393c5c9a61dcc54321575&t=b1a64311267d8da" frameBorder="0"></iframe>
             </div>
             <div class="row">
+                <h3>#phpuk14 temperature</h3>
                 <iframe width="970" height="400" src="//embed.chartblocks.com/1.0/?c=530616f0c9a61dda70321575&t=56b069793a99c47" frameBorder="0"></iframe>
             </div>
             <div class="footer">
